--- a/pages/19958.html
+++ b/pages/19958.html
@@ -375,6 +375,8 @@ margin-left: 0em;
 <li></li>
 </ul>
 
+<p>(More to go here.)</p>
+
 <h2 id="remark">Remark</h2>
 
 <p>Any category of interest is a variety of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Ω</mi></mrow><annotation encoding="application/x-tex">\Omega</annotation></semantics></math>-groups (in the sense of Higgins) and so is automatically a <a class="existingWikiWord" href="/nlab/show/semi-abelian+category">semi-abelian category</a>. This provides a useful set of fairly concret examples for study in the semi-abelian / proto-modular context.</p>
@@ -402,14 +404,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 26, 2018 at 02:38:39.
+  Last revised on November 26, 2018 at 03:38:29.
   See the <a href="https://ncatlab.org/nlab/history/category of group-based universal algebras" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/category+of+group-based+universal+algebras" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/category+of+group-based+universal+algebras/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/category+of+group-based+universal+algebras" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/category+of+group-based+universal+algebras" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/category+of+group-based+universal+algebras" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/category+of+group-based+universal+algebras/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/category+of+group-based+universal+algebras" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/category+of+group-based+universal+algebras" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/category of group-based universal algebras/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
