--- a/pages/5699.html
+++ b/pages/5699.html
@@ -313,18 +313,16 @@ margin-left: 0em;
 <body>
 <ul>
 <li>
-<p><a href="http://physics.harvard.edu/~vafa/">website</a></p>
+<p><a href="https://www.cumrunvafa.org/">personal webpage</a></p>
+</li>
+
+<li>
+<p><a href="http://physics.harvard.edu/~vafa/">institute website</a></p>
 </li>
 
 <li>
 <p><a href="http://en.wikipedia.org/wiki/Cumrun_Vafa">Wikipedia entry</a></p>
 </li>
-</ul>
-
-<h2 id="related_entries">Related entries</h2>
-
-<ul>
-<li><a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a></li>
 </ul>
 
 <h2 id="some_talks">some talks</h2>
@@ -338,20 +336,230 @@ margin-left: 0em;
 <p><em>F-theory, Black holes and topological strings</em>, talk at <a href="https://www.ift.uam-csic.es/en/content/f-theory-black-holes-and-topological-strings">ift 2018</a>, (<a href="https://workshops.ift.uam-csic.es/files/221/Vafa.pdf">pdf</a>, <a href="https://www.youtube.com/watch?v=Fmri3ke8Q-g">recording</a>)</p>
 </li>
 </ul>
+
+<h2 id="related_lab_entries">Related <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>Lab entries</h2>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/string+theory">string theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/F-theory">F-theory</a>,</p>
+
+<ul>
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/F%27-theory">F'-theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/duality+between+M%2FF-theory+and+heterotic+string+theory">duality between M/F-theory and heterotic string theory</a></p>
+</li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Gopakumar-Vafa+duality">Gopakumar-Vafa duality</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Brandenberger-Vafa+mechanism">Brandenberger-Vafa mechanism</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/topological+string">topological string</a></p>
+
+<ul>
+<li><a class="existingWikiWord" href="/nlab/show/A-model">A-model</a>, <a class="existingWikiWord" href="/nlab/show/B-model">B-model</a></li>
+</ul>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/black+holes+in+string+theory">black holes in string theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/geometric+engineering+of+quantum+field+theory">geometric engineering of quantum field theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/mirror+symmetry">mirror symmetry</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/6d+%282%2C0%29-superconformal+QFT">6d (2,0)-superconformal QFT</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/wall+crossing">wall crossing</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/landscape+of+string+theory+vacua">landscape of string theory vacua</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/mysterious+duality">mysterious duality</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/weak+gravity+conjecture">weak gravity conjecture</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/grand+unified+theory">grand unified theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/topological+M-theory">topological M-theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/discrete+torsion">discrete torsion</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Landau-Ginzburg+model">Landau-Ginzburg model</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/bosonization">bosonization</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/orbifold">orbifold</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/flux+compactification">flux compactification</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/moduli+stabilization">moduli stabilization</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/E-string">E-string</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/cosmic+censorship+hypothesis">cosmic censorship hypothesis</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/little+string+theory">little string theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/fractional+D-brane">fractional D-brane</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/conifold+transition">conifold transition</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/string+phenomenology">string phenomenology</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Riemann+theta+function">Riemann theta function</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/axion">axion</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/enhanced+gauge+symmetry">enhanced gauge symmetry</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/quiver+gauge+theory">quiver gauge theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Kaluza-Klein+monopole">Kaluza-Klein monopole</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/universal+exceptionalism">universal exceptionalism</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/M-theory+on+G2-manifolds">M-theory on G2-manifolds</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Hitchin+functional">Hitchin functional</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/self-dual+higher+gauge+theory">self-dual higher gauge theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/duality+in+physics">duality in physics</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/Khovanov+homology">Khovanov homology</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/zeta+function+of+an+elliptic+differential+operator">zeta function of an elliptic differential operator</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/ADE+classification">ADE classification</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/theta+function">theta function</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/7-dimensional+supergravity">7-dimensional supergravity</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/NS5-brane">NS5-brane</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/N%3D2+D%3D4+super+Yang-Mills+theory">N=2 D=4 super Yang-Mills theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/topologically+twisted+D%3D4+super+Yang-Mills+theory">topologically twisted D=4 super Yang-Mills theory</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/U-duality">U-duality</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/TCFT">TCFT</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/confinement">confinement</a></p>
+</li>
+</ul>
 <div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on October 26, 2018 at 05:28:37.
+  Last revised on November 26, 2018 at 03:08:11.
   See the <a href="https://ncatlab.org/nlab/history/Cumrun Vafa" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Cumrun+Vafa" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Cumrun+Vafa/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Cumrun+Vafa" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Cumrun+Vafa" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Cumrun+Vafa" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Cumrun+Vafa/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Cumrun+Vafa" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Cumrun+Vafa" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Cumrun Vafa/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
