--- a/pages/6725.html
+++ b/pages/6725.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -649,8 +649,8 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Minkowski+spacetime">Minkowski spacetime</a></p>
 </li>
-</ul><table><thead><tr><th><strong> </strong></th><th>vanishing </th><th>positive </th></tr></thead><tbody><tr><td style="text-align: left;"><strong>vanishing </strong></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
-<tr><td style="text-align: left;"><strong>positive </strong></td><td style="text-align: left;"></td><td style="text-align: left;"></td></tr>
+</ul><table><thead><tr><th><strong><a class="existingWikiWord" href="/nlab/show/black+hole">black hole</a> <a class="existingWikiWord" href="/nlab/show/spacetimes">spacetimes</a></strong></th><th>vanishing <a class="existingWikiWord" href="/nlab/show/angular+momentum">angular momentum</a></th><th><a class="existingWikiWord" href="/nlab/show/positive+number">positive</a> <a class="existingWikiWord" href="/nlab/show/angular+momentum">angular momentum</a></th></tr></thead><tbody><tr><td style="text-align: left;"><strong>vanishing <a class="existingWikiWord" href="/nlab/show/charge">charge</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Schwarzschild+spacetime">Schwarzschild spacetime</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Kerr+spacetime">Kerr spacetime</a></td></tr>
+<tr><td style="text-align: left;"><strong><a class="existingWikiWord" href="/nlab/show/positive+number">positive</a> <a class="existingWikiWord" href="/nlab/show/charge">charge</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Reissner-Nordstrom+spacetime">Reissner-Nordstrom spacetime</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Kerr-Newman+spacetime">Kerr-Newman spacetime</a></td></tr>
 </tbody></table><ul>
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/asymptotically+flat+spacetime">asymptotically flat spacetime</a></p>
@@ -1521,20 +1521,26 @@ margin-left: 0em;
 <ul>
 <li id="APT98">I. Antoniadis, H. Partouche, T.R. Taylor, <em>Lectures on Heterotic-Type I Duality</em>, Nucl.Phys.Proc.Suppl. 61A (1998) 58-71; Nucl.Phys.Proc.Suppl. 67 (1998) 3-16</li>
 </ul>
+
+<p>Discussion of <a class="existingWikiWord" href="/nlab/show/string+phenomenology">string phenomenology</a> in Horava-Witten theory:</p>
+
+<ul>
+<li id="Ovrut18"><a class="existingWikiWord" href="/nlab/show/Burt+Ovrut">Burt Ovrut</a>, <em>Vacuum Constraints for Realistic Heterotic M-Theories</em> (<a href="https://arxiv.org/abs/1811.08892">arXiv:1811.08892</a>)</li>
+</ul>
 </body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on October 26, 2018 at 08:37:08.
+  Last revised on November 26, 2018 at 09:18:24.
   See the <a href="https://ncatlab.org/nlab/history/Hořava-Witten theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Ho%C5%99ava-Witten+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Ho%C5%99ava-Witten+theory/25" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(25 revisions)</span> | <a href="/nlab/show/diff/Ho%C5%99ava-Witten+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Ho%C5%99ava-Witten+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Ho%C5%99ava-Witten+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Ho%C5%99ava-Witten+theory/26" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(26 revisions)</span> | <a href="/nlab/show/diff/Ho%C5%99ava-Witten+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Ho%C5%99ava-Witten+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Hořava-Witten theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
