--- a/pages/4858.html
+++ b/pages/4858.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/5767/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/5767/#Item_2" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -351,22 +351,20 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/twistor+space">twistor space</a></p>
 </li>
 </ul>
-<div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div>
-<p><a href="lo90.bdg.ru">hqzLs16w</a></p>
-</body></html>
+<div class="property">category: <a class="category_link" href="/nlab/all_pages/people">people</a></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on November 26, 2018 at 02:07:40.
+  Last revised on November 26, 2018 at 10:04:09.
   See the <a href="https://ncatlab.org/nlab/history/Roger Penrose" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Roger+Penrose" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Roger+Penrose/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Roger+Penrose" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Roger+Penrose" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Roger+Penrose" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Roger+Penrose/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Roger+Penrose" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Roger+Penrose" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Roger Penrose/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
