--- a/pages/19958.html
+++ b/pages/19958.html
@@ -399,6 +399,10 @@ margin-left: 0em;
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/protomodular+category">protomodular category</a></p>
 </li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/variety+of+algebras">variety of algebras</a></p>
+</li>
 </ul>
 
 <h2 id="references">References</h2>
@@ -412,7 +416,7 @@ margin-left: 0em;
 <p>The point about actions is in</p>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/G.+Metere">G. Metere</a>, <em>A note on strong protomodularity, actions and quotients,</em> Journal of Pure and Applied Algebra, 221 (2017)</li>
+<li><a class="existingWikiWord" href="/nlab/show/G.+Metere">G. Metere</a>, <em>A note on strong protomodularity, actions and quotients,</em> Journal of Pure and Applied Algebra, 221 (2017) 75 - 88.</li>
 </ul>
 </body></html>
 
@@ -420,14 +424,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 26, 2018 at 12:58:08.
+  Last revised on November 26, 2018 at 13:39:15.
   See the <a href="https://ncatlab.org/nlab/history/category of group-based universal algebras" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/category+of+group-based+universal+algebras" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/category+of+group-based+universal+algebras/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/category+of+group-based+universal+algebras" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/category+of+group-based+universal+algebras" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/category+of+group-based+universal+algebras" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/category+of+group-based+universal+algebras/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/category+of+group-based+universal+algebras" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/category+of+group-based+universal+algebras" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/category of group-based universal algebras/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
