--- a/pages/3004.html
+++ b/pages/3004.html
@@ -732,6 +732,10 @@ margin-left: 0em;
 </li>
 
 <li>
+<p>The theory of a set isomorphic to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>ℕ</mi></mrow><annotation encoding="application/x-tex">\mathbb{N}</annotation></semantics></math> is geometric, and makes essential use of the infinitary disjunctions. See <a class="existingWikiWord" href="/nlab/show/geometric+type+theory">geometric type theory</a>.</p>
+</li>
+
+<li>
 <p>A geometric theory whose <a class="existingWikiWord" href="/nlab/show/classifying+topos">classifying topos</a> is a <a class="existingWikiWord" href="/nlab/show/presheaf+topos">presheaf topos</a> is called a <em><a class="existingWikiWord" href="/nlab/show/theory+of+presheaf+type">theory of presheaf type</a></em>.</p>
 </li>
 </ul>
@@ -911,14 +915,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 26, 2018 at 11:15:20.
+  Last revised on November 26, 2018 at 14:29:03.
   See the <a href="https://ncatlab.org/nlab/history/geometric theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/geometric+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/geometric+theory/36" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(36 revisions)</span> | <a href="/nlab/show/diff/geometric+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/geometric+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/geometric+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/geometric+theory/37" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(37 revisions)</span> | <a href="/nlab/show/diff/geometric+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/geometric+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/geometric theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
