--- a/pages/8508.html
+++ b/pages/8508.html
@@ -831,7 +831,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>See also</p>
+<p>Further discussion of <a class="existingWikiWord" href="/nlab/show/supergeometry">supergeometric</a> <a class="existingWikiWord" href="/nlab/show/Teichm%C3%BCller+space">Teichmüller space</a>:</p>
 
 <ul>
 <li>
@@ -852,14 +852,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 27, 2018 at 02:55:35.
+  Last revised on November 27, 2018 at 03:17:47.
   See the <a href="https://ncatlab.org/nlab/history/super Riemann surface" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/super+Riemann+surface" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/super+Riemann+surface/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/super+Riemann+surface" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/super+Riemann+surface" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/super+Riemann+surface" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/super+Riemann+surface/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/super+Riemann+surface" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/super+Riemann+surface" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/super Riemann surface/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
