--- a/pages/19937.html
+++ b/pages/19937.html
@@ -490,13 +490,13 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p>Solutions to <a class="existingWikiWord" href="/nlab/show/Einstein%27s+equations">Einstein's equations</a> which are <a class="existingWikiWord" href="/nlab/show/black+holes">black holes</a> in <a class="existingWikiWord" href="/nlab/show/spacetimes">spacetimes</a> that far away from the black hole are asymptiotic (not to <a class="existingWikiWord" href="/nlab/show/Minkowski+spacetime">Minkowski spacetime</a> but) to <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spacetime">anti de Sitter spacetime</a>.</p>
+<p>These are solutions to <a class="existingWikiWord" href="/nlab/show/Einstein%27s+equations">Einstein's equations</a> which are <a class="existingWikiWord" href="/nlab/show/black+holes">black holes</a> in <a class="existingWikiWord" href="/nlab/show/spacetimes">spacetimes</a> that far away from the black hole are asymptotic (not to <a class="existingWikiWord" href="/nlab/show/Minkowski+spacetime">Minkowski spacetime</a> but) to <a class="existingWikiWord" href="/nlab/show/anti+de+Sitter+spacetime">anti de Sitter spacetime</a>.</p>
 
 <h2 id="properties">Properties</h2>
 
 <h3 id="in_adscft">In AdS/CFT</h3>
 
-<p>Unde the <a class="existingWikiWord" href="/nlab/show/AdS-CFT+correspondence">AdS-CFT correspondence</a> black holes in the anti-de Sitter spacetime translate to the <a class="existingWikiWord" href="/nlab/show/conformal+field+theory">conformal field theory</a> on the <a class="existingWikiWord" href="/nlab/show/asymptotic+boundary">asymptotic boundary</a> being at <a class="existingWikiWord" href="/nlab/show/thermal+field+theory">positive temperature</a> (e.g. <a href="#Duff99">Duff 99, section 6</a>, <a href="#Natsuume15">Natsuume 15, section 7</a>).</p>
+<p>Under the <a class="existingWikiWord" href="/nlab/show/AdS-CFT+correspondence">AdS-CFT correspondence</a> black holes in the anti-de Sitter spacetime translate to the <a class="existingWikiWord" href="/nlab/show/conformal+field+theory">conformal field theory</a> on the <a class="existingWikiWord" href="/nlab/show/asymptotic+boundary">asymptotic boundary</a> being at <a class="existingWikiWord" href="/nlab/show/thermal+field+theory">positive temperature</a> (e.g. <a href="#Duff99">Duff 99, section 6</a>, <a href="#Natsuume15">Natsuume 15, section 7</a>).</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 <table><thead><tr><th><strong><a class="existingWikiWord" href="/nlab/show/black+hole">black hole</a> <a class="existingWikiWord" href="/nlab/show/spacetimes">spacetimes</a></strong></th><th>vanishing <a class="existingWikiWord" href="/nlab/show/angular+momentum">angular momentum</a></th><th><a class="existingWikiWord" href="/nlab/show/positive+number">positive</a> <a class="existingWikiWord" href="/nlab/show/angular+momentum">angular momentum</a></th></tr></thead><tbody><tr><td style="text-align: left;"><strong>vanishing <a class="existingWikiWord" href="/nlab/show/charge">charge</a></strong></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Schwarzschild+spacetime">Schwarzschild spacetime</a></td><td style="text-align: left;"><a class="existingWikiWord" href="/nlab/show/Kerr+spacetime">Kerr spacetime</a></td></tr>
@@ -551,14 +551,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 27, 2018 at 02:52:13.
+  Last revised on November 27, 2018 at 05:14:35.
   See the <a href="https://ncatlab.org/nlab/history/black hole in anti-de Sitter spacetime" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/black+hole+in+anti-de+Sitter+spacetime" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/black+hole+in+anti-de+Sitter+spacetime/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/black+hole+in+anti-de+Sitter+spacetime" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/black+hole+in+anti-de+Sitter+spacetime" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/black+hole+in+anti-de+Sitter+spacetime" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/black+hole+in+anti-de+Sitter+spacetime/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/black+hole+in+anti-de+Sitter+spacetime" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/black+hole+in+anti-de+Sitter+spacetime" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/black hole in anti-de Sitter spacetime/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
