--- a/pages/7588.html
+++ b/pages/7588.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -759,11 +759,11 @@ margin-left: 0em;
 
 <h2 id="idea">Idea</h2>
 
-<p><strong>Point-free topology</strong> refers to various formulations of <a class="existingWikiWord" href="/nlab/show/topology">topology</a> that are not based on the notion of <a class="existingWikiWord" href="/nlab/show/topological+space">topological space</a> as a <a class="existingWikiWord" href="/nlab/show/set">set</a> of <a class="existingWikiWord" href="/nlab/show/points">points</a> equipped with <a class="existingWikiWord" href="/nlab/show/extra+structure">extra structure</a>. What they generally have in common is that instead the points are described as models of a <a class="existingWikiWord" href="/nlab/show/geometric+theory">geometric theory</a>. This change has some important consequences.</p>
+<p><strong>Point-free topology</strong> refers to various formulations of <a class="existingWikiWord" href="/nlab/show/topology">topology</a> that are not based on the notion of <a class="existingWikiWord" href="/nlab/show/topological+space">topological space</a> as a <a class="existingWikiWord" href="/nlab/show/set">set</a> of <a class="existingWikiWord" href="/nlab/show/points">points</a> equipped with <a class="existingWikiWord" href="/nlab/show/extra+structure">extra structure</a>. What they generally have in common is that instead the points are described as <a class="existingWikiWord" href="/nlab/show/models">models</a> of a <a class="existingWikiWord" href="/nlab/show/geometric+theory">geometric theory</a>. This change has some important consequences.</p>
 
-<p>First, it conveniently describes the points not only in one’s favourite category of sets, but also in arbitrary <a class="existingWikiWord" href="/nlab/show/Grothendieck+topos">Grothendieck toposes</a>.</p>
+<p>First, it conveniently describes the points not only in one’s favourite <a class="existingWikiWord" href="/nlab/show/category+of+sets">category of sets</a>, but also in arbitrary <a class="existingWikiWord" href="/nlab/show/Grothendieck+topos">Grothendieck toposes</a>.</p>
 
-<p>Second, it opens up the possibility of using predicate geometric theories, to obtain generalized spaces (the classifying toposes) in the sense of Grothendieck. This article will mostly concern itself with the ungeneralized point-free spaces, corresponding to propositional geometric theories.</p>
+<p>Second, it opens up the possibility of using predicate geometric theories, to obtain generalized spaces (the <a class="existingWikiWord" href="/nlab/show/classifying+toposes">classifying toposes</a>) in the sense of Grothendieck. This article will mostly concern itself with the ungeneralized point-free spaces, corresponding to propositional geometric theories.</p>
 
 <p>The phrase “point-free topology” is often taken as synonymous with <em>pointless topology</em> <a href="#Johnstone83">Johnstone 83</a>. However, let us reserve “pointless” for approaches that avoid mentioning points and refer directly to the geometric theory presentation and structures deriving from it.</p>
 
@@ -864,14 +864,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on November 27, 2018 at 12:55:11.
+  Last revised on November 27, 2018 at 13:08:25.
   See the <a href="https://ncatlab.org/nlab/history/point-free topology" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/point-free+topology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/point-free+topology/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/point-free+topology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/point-free+topology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/point-free+topology" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/point-free+topology/10" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(10 revisions)</span> | <a href="/nlab/show/diff/point-free+topology" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/point-free+topology" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/point-free topology/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
